# bakabakaband

./: .gitignore  Build-Windows-Release-Package.ps1  Makefile.am  README.md  README_en.md  bakabaka.css  configure.ac  index.css  index.html  readme.md  v-editor.css  v-editor.html  『冥王より』.md
.github/scripts/: check-format.sh
.github/workflows/: build-with-autotools.yml  create-cache-for-ccache.yml  publish-spoiler-page.yml  pull-request-status-check.yml
Bakabakaband/: Bakabakaband.sln
Bakabakaband/Bakabakaband/: Bakabakaband.vcxproj  (+1 more)
document/: article-20231214.html  article-20231215.html  article-20231219.html  article-20231224.html  article-20240101.html  article-20240115.html  article-20240427.html  list.html  melkor.html
doxygen/: Bakabakaband.doxyfile  action-limited_8cpp.html  action-limited_8cpp__incl.map  action-limited_8cpp__incl.md5  action-limited_8cpp_a071fa928301cca389bfefc56eded6e02_cgraph.md5  action-limited_8cpp_a2d38e70c73ec7a8ef315889388365bb3_cgraph.md5  action-limited_8cpp_a67a4629c20dfdbd1febcb4ab33347267_cgraph.md5  action-limited_8cpp_a7c7cde3f3a0985e2a688ac6a49a389e5_cgraph.md5  action-limited_8cpp_a7c7cde3f3a0985e2a688ac6a49a389e5_icgraph.map  action-limited_8cpp_a8d29d006f56dadb8397fe5bb8a516dce_cgraph.map  action-limited_8cpp_a8d29d006f56dadb8397fe5bb8a516dce_cgraph.md5  action-limited_8cpp_a8d29d006f56dadb8397fe5bb8a516dce_icgraph.map  action-limited_8cpp_a8d29d006f56dadb8397fe5bb8a516dce_icgraph.md5  action-limited_8cpp_ab6e41ead2ec3155cacbd47e788347578_cgraph.map  action-limited_8cpp_ab6e41ead2ec3155cacbd47e788347578_cgraph.md5  action-limited_8cpp_ab6e41ead2ec3155cacbd47e788347578_icgraph.md5  action-limited_8cpp_ae10d8ed29ef4c6ac84df9824b665c76b_cgraph.map  action-limited_8cpp_ae10d8ed29ef4c6ac84df9824b665c76b_cgraph.md5  action-limited_8h.html  action-limited_8h__dep__incl.map  action-limited_8h__dep__incl.md5  action-limited_8h__incl.map  action-limited_8h__incl.md5  action-limited_8h_a071fa928301cca389bfefc56eded6e02_cgraph.map  action-limited_8h_a071fa928301cca389bfefc56eded6e02_icgraph.map  action-limited_8h_a071fa928301cca389bfefc56eded6e02_icgraph.md5  action-limited_8h_a2d38e70c73ec7a8ef315889388365bb3_cgraph.map  action-limited_8h_a2d38e70c73ec7a8ef315889388365bb3_icgraph.map  action-limited_8h_a2d38e70c73ec7a8ef315889388365bb3_icgraph.md5  action-limited_8h_a67a4629c20dfdbd1febcb4ab33347267_cgraph.map  action-limited_8h_a67a4629c20dfdbd1febcb4ab33347267_icgraph.map  action-limited_8h_a67a4629c20dfdbd1febcb4ab33347267_icgraph.md5  action-limited_8h_a7c7cde3f3a0985e2a688ac6a49a389e5_cgraph.map  action-limited_8h_a7c7cde3f3a0985e2a688ac6a49a389e5_icgraph.md5  action-limited_8h_a8d29d006f56dadb8397fe5bb8a516dce_cgraph.md5  action-limited_8h_ab6e41ead2ec3155cacbd47e788347578_icgraph.map  action-limited_8h_ae10d8ed29ef4c6ac84df9824b665c76b_icgraph.map  action-limited_8h_ae10d8ed29ef4c6ac84df9824b665c76b_icgraph.md5  action-limited_8h_source.html  action-setter_8cpp.html  (+25567 more)
dump/: hfo-testplay.txt
lib/file/books/: Makefile.am  book-001_jp.txt  book-004_jp.txt  book-005_en.txt  book-005_jp.txt  book-008_en.txt  book-008_jp.txt  book-009_en.txt  book-009_jp.txt  book-010_en.txt  book-010_jp.txt  book-011_en.txt  book-011_jp.txt
manual/: readme.md  アライアンス.md  インシデント記録.md  変愚からの主な変更要素.md  時空崩壊度.md  馬鹿馬鹿蛮怒と各原作の二次設定について.md
src/: Makefile.am  ang_eng.rc  ang_jp.rc  angband.rc  main-gcu.cpp  main-win.c  main-win.cpp  main-x11.cpp  main.cpp
update/: update.html
(+1648 files in other folders)
